--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-05-14  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Fix warnings.
+	* include/roboptim/core/visualization/gnuplot-function.hh:
+	Predeclare functions.
+
 2009-05-10  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Predeclare functions.
