--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-05-27  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Fix wrong signature in NTimesDerivableFunction.
+	* include/roboptim/core/n-times-derivable-function.hh: Here.
+
 2009-05-26  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Fix n-times-derivable-function gradient.
