Add tests to Doxygen EXAMPLE_PATH.
	* doc/Doxyfile.in: Here.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Add tests to Doxygen EXAMPLE_PATH.
+	* doc/Doxyfile.in: Here.
+
+2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Fix typo.
 	* include/roboptim/core/twice-derivable-function.hh: Fix typo.
 
