--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,19 @@
 2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Document and clean interfaces.
+	* include/roboptim/core/derivable-function.hh,
+	* include/roboptim/core/finite-difference-gradient.hh,
+	* include/roboptim/core/freeze.hh,
+	* include/roboptim/core/function.hh,
+	* include/roboptim/core/fwd.hh,
+	* include/roboptim/core/indent.hh,
+	* include/roboptim/core/result-with-warnings.hh,
+	* include/roboptim/core/result.hh,
+	* include/roboptim/core/twice-derivable-function.hh:
+	Document the code, clean the interface.
+
+2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Add tests to Doxygen EXAMPLE_PATH.
 	* doc/Doxyfile.in: Here.
 
