--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,20 @@
 2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	More documentation.
+	* include/roboptim/core/derivable-function.hh,
+	* include/roboptim/core/function.hh,
+	* include/roboptim/core/generic-solver.hh,
+	* include/roboptim/core/problem.hh,
+	* include/roboptim/core/problem.hxx,
+	* include/roboptim/core/solver-error.hh,
+	* include/roboptim/core/solver-factory.hh,
+	* include/roboptim/core/solver-warning.hh,
+	* include/roboptim/core/solver.hh,
+	* include/roboptim/core/util.hh:
+	Document and clean.
+
+2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Document and clean interfaces.
 	* include/roboptim/core/derivable-function.hh,
 	* include/roboptim/core/finite-difference-gradient.hh,
