--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Fix Gnuplot show command.
+	* src/visualization/gnuplot-commands.cc: Here.
+
+2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Document Gnuplot visualization.
 	* include/roboptim/core/visualization/gnuplot-commands.hh,
 	* include/roboptim/core/visualization/gnuplot-function.hh,
