--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,36 @@
 2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Document and clean.
+	* include/roboptim/core/derivable-function.hh,
+	* include/roboptim/core/finite-difference-gradient.hh,
+	* include/roboptim/core/freeze.hh,
+	* include/roboptim/core/function.hh,
+	* include/roboptim/core/fwd.hh,
+	* include/roboptim/core/indent.hh,
+	* include/roboptim/core/linear-function.hh,
+	* include/roboptim/core/n-times-derivable-function.hxx,
+	* include/roboptim/core/numeric-linear-function.hh,
+	* include/roboptim/core/numeric-quadratic-function.hh,
+	* include/roboptim/core/plugin/dummy.hh,
+	* include/roboptim/core/problem.hxx,
+	* include/roboptim/core/quadratic-function.hh,
+	* include/roboptim/core/result-with-warnings.hh,
+	* include/roboptim/core/result.hh,
+	* include/roboptim/core/solver-error.hh,
+	* include/roboptim/core/solver-factory.hh,
+	* include/roboptim/core/solver-factory.hxx,
+	* include/roboptim/core/solver-warning.hh,
+	* include/roboptim/core/solver.hxx,
+	* include/roboptim/core/twice-derivable-function.hh,
+	* include/roboptim/core/util.hh,
+	* include/roboptim/core/util.hxx,
+	* include/roboptim/core/visualization/gnuplot-commands.hh,
+	* include/roboptim/core/visualization/gnuplot-function.hh,
+	* include/roboptim/core/visualization/gnuplot.hh,
+	* src/doc.hh: Document and clean.
+
+2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Document linear and quadratic functions.
 	* include/roboptim/core/linear-function.hh,
 	* include/roboptim/core/quadratic-function.hh: Document.
