--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Document test.
+	* tests/n-times-derivable-function.cc: Here.
+
+2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Document tests.
 	* tests/problem-cc.cc,
 	* tests/result.cc,
