--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Update quickstart.
+	* src/doc.hh: Update to new interface.
+
+2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Document test.
 	* tests/n-times-derivable-function.cc: Here.
 
