--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Fix compilation warning.
+	* include/roboptim/core/generic-solver.hh:
+	Return a dummy value in impossible case.
+
+2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Fix typo in method name.
 	* include/roboptim/core/generic-solver.hh: Here.
 
