--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Synchronize.
+	* doc/sf-upload.sh.in: Here.
+
+2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Use new pkg-config rules.
 	* Makefile.am: Here.
 
