--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Require Boost 1.34.
+	Revert to Boost 1.34 to keep Ubuntu Hardy compatibility.
+	* configure.ac: Here.
+
+2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Synchronize with share.
 	* build-aux/pkg-config.mk: Here.
 
