--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Do not use boost::make_shared.
+	* tests/simple.cc: Here.
+
+2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Require Boost 1.34.
 	Revert to Boost 1.34 to keep Ubuntu Hardy compatibility.
 	* configure.ac: Here.
