--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Enhance bootstrap to handle submodules.
+	* bootstrap: Retrieve submodules automatically.
+
+2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Use submodules to factorize code.
 	* .gitmodules: New.
 	* build-aux/autotest.at: Remove.
