--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Check that git is newer enough.
+	* bootstrap: Require at least git 1.5.5.
+
+2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Enhance bootstrap to handle submodules.
 	* bootstrap: Retrieve submodules automatically.
 
