--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-07-15  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Use fixed point display for floating-point numbers in Gnuplot.
+	* include/roboptim/core/visualization/gnuplot-function.hh:
+	Use fixed point display.
+	* tests/finite-difference-gradient.stdout,
+	* tests/visualization-gnuplot-function.stdout: Regenerate.
+
 2009-07-07  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Add method to build a discrete interval from an interval and a step.
