--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Add missing initialization list.
+	* src/result-with-warnings.cc: Here.
+
 2009-07-23  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Clean finite difference gradient code.
