--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Make Solver class destructor virtual.
+	* include/roboptim/core/solver.hh: Here.
+
+2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Add missing initialization list.
 	* src/result-with-warnings.cc: Here.
 
