--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-07-27  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Add a dependency toward roboptim-core in dummy plug-in.
+	* src/Makefile.am: Here.
+
+2009-07-27  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Make factory more verbose.
 	* include/roboptim/core/solver-factory.hxx: Display
 	error messages if lt_dlclose or lt_dlexit fail.
